load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrations",
    srcs = ["embed.go"],
    embedsrcs = [
        "//migrations/frontend:sql",
        "//migrations/codeinsights:sql",
        "//migrations/codeintel:sql",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/migrations",
    visibility = ["//visibility:public"],
)
