load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrations",
    srcs = ["embed.go"],
    embedsrcs = [
        "//migrations/frontend:sql",  # keep
        "//migrations/codeinsights:sql",  # keep
        "//migrations/codeintel:sql",  # keep
    ],
    importpath = "github.com/sourcegraph/sourcegraph/migrations",
    visibility = ["//visibility:public"],
)
