load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "monitoring_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/monitoring",
    visibility = ["//visibility:private"],
    deps = [
        "//monitoring/command",
        "@com_github_sourcegraph_log//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "monitoring",
    embed = [":monitoring_lib"],
    visibility = ["//visibility:public"],
)
