load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "monitoring_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/monitoring",
    visibility = ["//visibility:private"],
    deps = [
        "//monitoring/command",
        "@com_github_sourcegraph_log//:log",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "monitoring",
    embed = [":monitoring_lib"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "generate_config",
    srcs = [],
    outs = ["monitoring.zip"],
    cmd = """
        $(location //monitoring:monitoring) generate \
                --all.dir monitoring && \
        zip -r $@ monitoring
        """,
    tools = ["//monitoring"],
)
